--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
         </div>
     </section>
     
+    <!---------------------------                       footer                           -------------------------------------- -->
+    <section id="footer">
+       <div>
+
+       </div>
+    </section>
+    
     <script src="script.js"></script>
 </body>
 </html>
