--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
@@ -65,6 +65,34 @@
         </div>
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3667.9418683046615!2d77.50123687509655!3d23.17232167906911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397c412e0329997d%3A0x2147ca9ade91509e!2sSignature%20360%E2%81%B0!5e0!3m2!1sen!2sin!4v1736273853017!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+     </section>
+
+     <!----------------------------                        contact form                  ------------------------------------ -->
+     <section id="form-details">
+        <form action="">
+            <span>LEAVE A MESSAGE</span>
+            <h2>We love to hear from you</h2>
+            <input type="text" placeholder="Your name">
+            <input type="text" placeholder="E-mail">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="white">Submit</button>
+        </form>
+
+        <div class="people">
+            <div>
+                <img src="men1.jpg" alt="">
+                <p><span>John Doe</span> Senior Marketing Manager <br> phone: +1234567890 <br> Email:example@g,ail.com</p>
+            </div>
+            <div>
+                <img src="men1.jpg" alt="">
+                <p><span>John Doe</span> Senior Marketing Manager <br> phone: +1234567890 <br> Email:example@g,ail.com</p>
+            </div>
+            <div>
+                <img src="men1.jpg" alt="">
+                <p><span>John Doe</span> Senior Marketing Manager <br> phone: +1234567890 <br> Email:example@g,ail.com</p>
+            </div>
         </div>
      </section>
 
