--- a/cart.html
+++ b/cart.html
@@ -17,9 +17,9 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a class="active" href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                <li id="lg-bag"><a class="active" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
         </div>
@@ -34,46 +34,83 @@
 
     <!-----------------------------                    Hero                             ------------------------------------- -->
      <section id="page-header" class="about-header">
-        <h2>#KnowUs</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit !</p>
+        <h2>#Cart</h2>
+        <p>Add your coupan code & SAVE upto 70%</p>
      </section>
 
-     <!-- -------------------------                     about                             ------------------------------------- -->
-      <section id="about-head" class="section-p1">
-        <img src="about1.avif" alt="">
-        <div>
-            <h2>Who We Are?</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam aut, tempora distinctio praesentium et asperiores recusandae, dolorum nihil necessitatibus esse molestiae quaerat perspiciatis fugit nulla laborum corrupti facere consequuntur debitis vitae quas incidunt obcaecati aperiam. Nostrum tempora doloremque possimus tenetur ullam optio quisquam cumque molestiae, maiores earum cupiditate dignissimos distinctio culpa quidem voluptate sequi expedita officiis iusto illum modi nesciunt quo ducimus? Odio necessitatibus dicta debitis quos sed porro atque fugit quidem at facere quaerat odit magnam accusamus voluptas inventore itaque unde impedit sapiente ad fugiat ipsa, suscipit, veritatis iusto? Quibusdam temporibus omnis hic harum necessitatibus possimus, accusantium esse dolores.</p>
-            <abbr title="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, fugiat natus corrupti laudantium tenetur et voluptatum assumenda error expedita tempora nobis numquam nostrum placeat aliquam deleniti quae sapiente ipsam pariatur?</abbr>
-            <br>
-            <br>
-            <marquee bgcolor="grey" loop="-1" scrollamount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae labore quisquam minima unde earum, enim ipsa reiciendis deserunt cupiditate recusandae velit veritatis delectus nemo officia? Perspiciatis blanditiis et impedit expedita!</marquee>
+      <!----------------------------                      cart                          ----------------------------------------- -->
+      <section id="cart" class="section-p1">
+        <table width="100%">
+            <thead>
+                <tr>
+                    <td>Remove</td>
+                    <td>Image</td>
+                    <td>Product</td>
+                    <td>Price</td>
+                    <td>Quantity</td>
+                    <td>Subtotal</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="#"><i class="fa-regular fa-circle-xmark"></i></a></td>
+                    <td><img src="caffeine lotion.webp" alt=""></td>
+                    <td>Caffeine Lotion</td>
+                    <td>RS.450</td>
+                    <td><input type="number" value="1"></td>
+                    <td>RS.450</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="fa-regular fa-circle-xmark"></i></a></td>
+                    <td><img src="caffeine lotion.webp" alt=""></td>
+                    <td>Caffeine Lotion</td>
+                    <td>RS.450</td>
+                    <td><input type="number" value="1"></td>
+                    <td>RS.450</td>
+                </tr>
+                <tr>
+                    <td><a href="#"><i class="fa-regular fa-circle-xmark"></i></a></td>
+                    <td><img src="caffeine lotion.webp" alt=""></td>
+                    <td>Caffeine Lotion</td>
+                    <td>RS.450</td>
+                    <td><input type="number" value="1"></td>
+                    <td>RS.450</td>
+                </tr>
+            </tbody>
+        </table>
+
+     </section>
+
+     <!-- -------------------------                      cart-add                       --------------------------------------- -->
+      <section id="cart-add" class="section-p1">
+        <div id="coupan">
+            <h3>Apply Coupans</h3>
+            <div>
+                <input type="text" placeholder="Enter your coupan">
+                <button class="white">Apply</button>
+            </div>
+        </div>
+
+        <div id="subtotal">
+            <h3>Cart Totals</h3>
+            <table>
+                <tr>
+                    <td>Cart Subtotal</td>
+                    <td>Rs.336</td>
+                </tr>
+                <tr>
+                    <td>Shipping</td>
+                    <td>Free</td>
+                </tr>
+                <tr>
+                    <td><strong>Total</strong></td>
+                    <td><strong>Rs.336</strong></td>
+                </tr>
+            </table>
+            <button class="white">Proceed to checkout</button>
         </div>
       </section>
 
-      <!-- --------------------------                     feature                         ------------------------------------- -->
-     <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="gud 1.webp" alt="">
-            <h6>Good Quality</h6>
-        </div>
-        <div class="fe-box">
-            <img src="clock.avif" alt="">
-            <h6>Online order</h6>
-        </div>
-        <div class="fe-box">
-            <img src="save.avif" alt="">
-            <h6>Save Money</h6>
-        </div>
-        <div class="fe-box">
-            <img src="sell.jpg" alt="">
-            <h6>Happy sell</h6>
-        </div>
-        <div class="fe-box">
-            <img src="hour.avif" alt="">
-            <h6>F24/7 Support</h6>
-        </div>
-     </section>
     
     <!---------------------------                       footer                           -------------------------------------- -->
     <footer class="section-p1">
